external-crates/move/crates/move-compiler/tests/development/enums/matching/bad_guard_2.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/bad_guard_2.move:3:17
  │
3 │     public enum Option<T> has drop {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

